2012-02-28 arnaud.fontaine
* Use a ListField for version and proxify error messages field in Component view.

2012-02-28 arnaud.fontaine
* Show Component version on ComponentTool view.

2012-02-28 arnaud.fontaine
* Add Developer Role on portal_components which is the only Role with write permissions on portal_components and subobjects.
* Modify component_validation_workflow to not set Permissions and let it get it from portal_components instead.

2012-02-25 arnaud.fontaine
* Add a Python script which performs the redirect rather than doing it in BusinessTemplate class.
* Rename *MigrateAllComponentFromFilesystem to *MigrateSourceCodeFromFilesystem.

2012-02-25 arnaud.fontaine
* Rename Component modified transition to modify as per naming conventions.

2012-02-25 arnaud.fontaine
* Merge component_interaction_workflow into dynamic_class_generation_interaction_workflow.

2012-02-25 arnaud.fontaine
* Remove useless DocumentConstraint Property Sheet for Document Component.

2012-02-24 arnaud.fontaine
* In Component view, show the error field in the left.

2012-02-24 arnaud.fontaine
* In Component view, display the error field with error CSS class to make it more visible.

2012-02-22 arnaud.fontaine
* Split up state and error message into two separate fields.
* Always set the Component state to modified upon modification, then check the consistency.

2012-02-21 arnaud.fontaine
* Do not update automatically the component module registry for reliability's sake.

2012-02-20 arnaud.fontaine
* Add Business Template action to import Document and Extensions automatically after giving the version.

2012-02-14 arnaud.fontaine
* Add component_interaction_workflow to Component Tool.

2012-02-11 arnaud.fontaine
* Update component module registry upon validate/invalidate.

2012-02-07 arnaud.fontaine
* Use resetOnceAtTransactionBoundary when a Component has been modified.

2012-02-02 arnaud.fontaine
* Perform revalidate automatically rather than requiring a manual action.
