@@ -108,7 +108,7 @@
       <dictionary>
         <item>
             <key> <string>_text</string> </key>
-            <value> <string>python: here.getPortalObject().getVersionPriority()</string> </value>
+            <value> <string>python: here.getPortalObject().getVersionPriorityList()</string> </value>
         </item>
       </dictionary>
     </pickle>
